--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         </div>
     </form>
 </div>
+<div class="row">
+    <ul id="list" class="list col-lg-6 col-8 mx-auto"></ul>
+</div>
+<div class="row">
+    <button id="btnClr" type = "button" class = "btn btn-primary mx-auto btnHide">Clear</button>
+</div>
 </div>
 </div>
 <script type="text/javascript" src="main.js"></script>
